Add simple-service page media

--- a/styles/header.css
+++ b/styles/header.css
@@ -468,6 +468,7 @@ button.popup-btn {
         opacity: 0;
         visibility: hidden;
         left: -100%;
+        height: 0px;
     }
     .header__top-nav .header__button {
         display: none;
